mqtt-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt
  labels:
    app: mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt
  template:
    metadata:
      labels:
        app: mqtt
    spec:
      containers:
        - name: mqtt
          image: eclipse-mosquitto
          ports:
            - containerPort: 1883
          volumeMounts:
            - name: mqtt-config
              mountPath: /mosquitto/config
            - name: mqtt-secret
              mountPath: /mosquitto/secret
      volumes:
        - name: mqtt-config
          configMap:
            name: mqtt-config-file
        - name: mqtt-secret
          secret:
            secretName: mqtt-secret-file
