node-app-ecr-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-ecr
  labels:
    app: node-app-ecr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app-ecr
  template:
    metadata:
      labels:
        app: node-app-ecr
    spec:
      containers:
        - name: node-app-ecr
          image: 196215119328.dkr.ecr.us-east-1.amazonaws.com/learn-build-image:1.3
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
