basic-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-hl
spec:
  clusterIP: None
  selector:
    app: nginx
  ports:
    - name: ui-app
      protocol: TCP
      port: 80
      targetPort: 80
    - name: log-app
      protocol: TCP
      port: 81
      targetPort: 8000
